Implement checkbox checking